--- a/index.html
+++ b/index.html
@@ -10,11 +10,35 @@
 
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/mobile-sm.css" media="screen and (max-width: 576px)">
-    <link rel="stylesheet" href="./css/mobile-md.css" media="screen and (max-width: 768px)">
+    <link rel="stylesheet" href="./css/mobile-sm.css" media="(min-width: 576px)">
+    <link rel="stylesheet" href="./css/mobile-md.css" media="(min-width: 768px)">
   </head>
 
   <body>
+    <div class="container">
 
+    </div>
+
+    <div class="container pagination">
+      <span class="pagination__current-page">
+        美食頁次 6/14
+      </span>
+      <div class="pagination__button-group">
+        <button class="pagination__button pagination__button-active" type="button" data-page="1" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="2" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="3" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="4" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="5" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="6" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="7" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="8" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="9" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="10" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="11" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="12" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="13" onclick="onPageChange(event)"></button>
+        <button class="pagination__button" type="button" data-page="14" onclick="onPageChange(event)"></button>
+      </div>
+    </div>
   </body>
 </html>
