--- a/index.html
+++ b/index.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="農村地方美食小吃特色料理頁面">
-    <meta name="keywords" content="農村, 地方, 美食, 農村美食, 農村小吃, 農村料理, 地方美食, 地方小吃, 地方料理, 地方特色小吃, 地方特色美食, 地方特色料理">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="農村地方美食小吃特色料理頁面" />
+    <meta
+      name="keywords"
+      content="農村, 地方, 美食, 農村美食, 農村小吃, 農村料理, 地方美食, 地方小吃, 地方料理, 地方特色小吃, 地方特色美食, 地方特色料理"
+    />
     <title>農村地方美食小吃特色料理頁面</title>
 
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/mobile-sm.css" media="(min-width: 576px)">
-    <link rel="stylesheet" href="./css/mobile-md.css" media="(min-width: 768px)">
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
 
   <body>
     <div class="container">
-
-    </div>
-
-    <div class="container pagination">
-      <span class="pagination__current-page">
-        美食頁次 6/14
-      </span>
-      <div class="pagination__button-group">
-        <button class="pagination__button pagination__button-active" type="button" data-page="1" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="2" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="3" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="4" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="5" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="6" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="7" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="8" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="9" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="10" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="11" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="12" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="13" onclick="onPageChange(event)"></button>
-        <button class="pagination__button" type="button" data-page="14" onclick="onPageChange(event)"></button>
+      <div class="row">
+        <div class="col flex justify-center">
+          <h1>農村地方美食小吃特色料理頁面</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-8">lll</div>
+        <div class="col-md-4">rrr</div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div id="paginator" class="pagination"></div>
+        </div>
       </div>
     </div>
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
