--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="ads col-md-4">
           <img src="./images/adv1.png" alt="ad1" />
           <img src="./images/adv2.png" alt="ad2" />
           <img src="./images/adv3.png" alt="ad3" />
