--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 class="col-12 col-md-3 flex justify-center justify-md-start items-center"
               >
                 <select
-                  id="city-selector"
+                  id="City-selector"
                   class="select w-full"
-                  name="city-selector"
+                  name="City-selector"
                 >
                   <option value="" selected disabled>請選擇行政區域</option>
                 </select>
@@ -42,15 +42,15 @@
                 class="col-12 col-md-3 flex justify-center justify-md-start items-center"
               >
                 <select
-                  id="town-selector"
+                  id="Town-selector"
                   class="select w-full"
-                  name="town-selector"
+                  name="Town-selector"
                 >
                   <option value="" selected disabled>請選擇鄉鎮區</option>
                 </select>
               </div>
               <div
-                id="mode-switcher"
+                id="Mode-switcher"
                 class="col-12 col-md-6 flex justify-center justify-md-end items-center"
               >
                 <label for="mode-switcher">檢視模式：</label>
@@ -101,20 +101,20 @@
               </div>
             </div>
             <div class="row">
-              <div id="foods" class="col"></div>
+              <div id="Foods" class="col"></div>
             </div>
             <div class="row">
               <div class="col">
-                <div id="paginator" class="pagination"></div>
+                <div id="Paginator" class="pagination"></div>
               </div>
             </div>
           </div>
         </div>
-        <div id="ads" class="ads flex-shrink"></div>
+        <div id="Ads" class="ads flex-shrink"></div>
       </div>
     </div>
 
-    <div id="loader" class="loader">
+    <div id="Loader" class="loader">
       <svg viewBox="0 0 100 100">
         <circle cx="50" cy="50" r="25" stroke-width="8" fill="none" />
       </svg>
